--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 CLIENT_URL=http://localhost:5173 # Will change if needed when we work on client
 PORT=5000
-MONGODB_URL=mongodb://localhost:27017/smartqa
+MONGODB_URL=mongodb+srv://riteshverma17:riteshverma17@live-chat-app.tcj9d.mongodb.net/?retryWrites=true&w=majority
 GEMINI_API_KEY=AIzaSyBiVQHBeUqD3tYXpCJNjduRWWySYNiReA4
